// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldCheckboxGroupsMenu renders multiple checkbox groups in correct order with search input 1`] = `
<fieldset
  class="govuk-fieldset"
  id="test"
>
  <legend
    class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-visually-hidden"
  >
    Choose options
  </legend>
  
  <label
    class="govuk-label"
    for="test-search"
  >
    Search options
  </label>
  <input
    class="govuk-input searchInput govuk-input--width-20"
    id="test-search"
    name="test-search"
    type="text"
  />
  <div
    class="optionsContainer"
  >
    <div
      class="govuk-form-group"
    >
      <fieldset
        class="govuk-fieldset"
        id="test-groupA"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Group A
        </legend>
        <div
          class="govuk-checkboxes govuk-checkboxes--small"
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="test-groupA-1"
              name="test"
              type="checkbox"
              value="1"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="test-groupA-1"
            >
              Option 1
            </label>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="test-groupA-2"
              name="test"
              type="checkbox"
              value="2"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="test-groupA-2"
            >
              Option 2
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="govuk-form-group"
    >
      <fieldset
        class="govuk-fieldset"
        id="test-groupB"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Group B
        </legend>
        <div
          class="govuk-checkboxes govuk-checkboxes--small"
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="test-groupB-3"
              name="test"
              type="checkbox"
              value="3"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="test-groupB-3"
            >
              Option 3
            </label>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="test-groupB-4"
              name="test"
              type="checkbox"
              value="4"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="test-groupB-4"
            >
              Option 4
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</fieldset>
`;

exports[`FormFieldCheckboxGroupsMenu renders single checkbox group with search input 1`] = `
<fieldset
  class="govuk-fieldset"
  id="test"
>
  <legend
    class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-visually-hidden"
  >
    Choose options
  </legend>
  
  <label
    class="govuk-label"
    for="test-search"
  >
    Search options
  </label>
  <input
    class="govuk-input searchInput govuk-input--width-20"
    id="test-search"
    name="test-search"
    type="text"
  />
  <div
    class="optionsContainer"
  >
    <div
      class="govuk-checkboxes govuk-checkboxes--small"
    >
      <button
        class="button noUnderline selectAll"
        id="test-all"
        type="button"
      >
        Select all 2 options
      </button>
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="test-1"
          name="test"
          type="checkbox"
          value="1"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="test-1"
        >
          Option 1
        </label>
      </div>
      <div
        class="govuk-checkboxes__item"
      >
        <input
          class="govuk-checkboxes__input"
          id="test-2"
          name="test"
          type="checkbox"
          value="2"
        />
        <label
          class="govuk-label govuk-checkboxes__label"
          for="test-2"
        >
          Option 2
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`FormFieldCheckboxGroupsMenu renders single checkbox group with single checkbox option and no search input 1`] = `
<fieldset
  class="govuk-fieldset"
  id="test"
>
  <legend
    class="govuk-fieldset__legend govuk-fieldset__legend--m"
  >
    Choose options
  </legend>
  
  <div
    class="govuk-checkboxes govuk-checkboxes--small"
  >
    <div
      class="govuk-checkboxes__item"
    >
      <input
        class="govuk-checkboxes__input"
        id="test-1"
        name="test"
        type="checkbox"
        value="1"
      />
      <label
        class="govuk-label govuk-checkboxes__label"
        for="test-1"
      >
        Option 1
      </label>
    </div>
  </div>
</fieldset>
`;
